compiler/typ/tests/fixtures/diagnostics/0779_polyvar_duplicate_tag_conflict_02.ml
let bad_beta : [ `A of int | `A of bool ] -> int =
  fun _ -> 1
